# annotator

./: CMakeLists.txt  README.md  ajaxresponder.cpp  annotatorwindow.cpp  annotatorwindow.h  annotatorwindow.ui  bagreader.cpp  bagreader.h  converter.cpp  converter.h  freeplay-sandbox-annotator.pro  gstaudioplay.cpp  imageviewer.cpp  main.cpp  timeline.cpp  timeline.hpp  timelineview.cpp  timelineview.hpp
html/: index.html
html/css/: material-icons.css
src/: ajaxhandler.cpp  ajaxhandler.h  ajaxhandler.hpp  ajaxresponder.h  annotation.cpp  annotation.h  annotation.hpp  annotatorwindow.cpp  annotatorwindow.hpp  annotatorwindow.ui  bagreader.cpp  bagreader.h  bagreader.hpp  converter.cpp  converter.hpp  freeannotationwidget.cpp  freeannotationwidget.hpp  gstaudioplay.cpp  gstaudioplay.h  imageviewer.cpp  imageviewer.h  jsoncpp.cpp  main.cpp  timeline.cpp  timeline.hpp
src/http_server/: mime_types.cpp  reply.cpp  reply.hpp  request_handler.cpp  request_handler.hpp  server.hpp
